[gd_scene load_steps=13 format=3 uid="uid://bhe0myvlbl6ro"]

[ext_resource type="PackedScene" uid="uid://eeux7se7oaa3" path="res://Scenes/Objects/Characters/NPCs/npc.tscn" id="1_1js4f"]
[ext_resource type="Script" path="res://Scenes/Objects/Characters/NPCs/npc_click.gd" id="2_48ob4"]
[ext_resource type="Texture2D" uid="uid://d0l7uhh7k31qm" path="res://Resources/Textures/Characters/NPCS/Click-Sheet.png" id="3_mulhx"]
[ext_resource type="AudioStream" uid="uid://byyxktqliudlb" path="res://Resources/Audio/SFX/Unused/click.wav" id="4_i2ph8"]
[ext_resource type="PackedScene" uid="uid://dtk255m0bxqkj" path="res://Scenes/Objects/Triggers/trigger_dialogue.tscn" id="4_tydh8"]
[ext_resource type="Script" path="res://Resources/Scripts/dialogue.gd" id="5_38238"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0owab"]
size = Vector2(93, 6)

[sub_resource type="Resource" id="Resource_34hed"]
script = ExtResource("5_38238")
character_name = "Click"
text = "Oh, you're back..."

[sub_resource type="Resource" id="Resource_hr08i"]
script = ExtResource("5_38238")
character_name = "Click"
text = "Maybe you should sit for a spell?"

[sub_resource type="Resource" id="Resource_cixwa"]
script = ExtResource("5_38238")
character_name = "Click"
text = "Hey, you got any cheese?"

[sub_resource type="Resource" id="Resource_wnhv0"]
script = ExtResource("5_38238")
character_name = "Click"
text = "I think I left my bomb bag somewhere in the Labyrinth..."

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2blnw"]
size = Vector2(94, 45)

[node name="NPC_Click" instance=ExtResource("1_1js4f")]
script = ExtResource("2_48ob4")

[node name="Sprite" type="Sprite2D" parent="." index="1"]
texture = ExtResource("3_mulhx")
flip_h = true
hframes = 5

[node name="Damaged" parent="Sounds" index="0"]
stream = ExtResource("4_i2ph8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea" index="0"]
position = Vector2(0.5, 5)
shape = SubResource("RectangleShape2D_0owab")

[node name="TriggerDialogue" parent="." index="5" instance=ExtResource("4_tydh8")]
monitoring = false
_sequence = Array[ExtResource("5_38238")]([SubResource("Resource_34hed"), SubResource("Resource_hr08i"), SubResource("Resource_cixwa"), SubResource("Resource_wnhv0")])
_randomize_order = true
_play_each_dialogue_once = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerDialogue" index="0"]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_2blnw")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
